--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ nav{
 }
 /* Main Section */
 main{
-    width: 1440px;
+    width: 1140px;
     margin: 0 ;
 }                          
 /* Action style */
@@ -74,7 +74,7 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 105px 150px 0px 150px;
+    padding: 105px 0px 0px 150px;
 }
 
 .action-heading{
@@ -96,4 +96,40 @@ margin-left: 0;}
 .action-image img{
     border-radius: 48px;
     width: 403px;
+    
+}
+/* Productivity Users section */
+
+.productive-users{
+background-color: rgba(78, 71, 255, 0.1);
+
+border-radius: 24px;
+margin-top: 120px;
+margin-left: 150px;
+}
+
+.users-title{ 
+    font-size: 38px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 50px;
+   
+
+}
+
+.user-activity{
+    font-size: 80px;
+    font-weight: bold;
+    color: rgba(78, 71, 255, 1);
+}
+.user-activity-item{
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.5);
+}
+.productive-user-container{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 50px;
+    
+
 }
