--- a/styles/style.css
+++ b/styles/style.css
@@ -144,7 +144,7 @@ margin-top: 120px;
 }
 
 /* Review Section */
-.reviews-section{
+
    
 .reviews{
     display: flex;
@@ -200,4 +200,34 @@ margin-top: 120px;
 .reviewer-name,.reviews-date{
     margin:0px;
     
+}
+/* focus better section */
+.focus-better-section{
+    background-color: rgba(255, 255, 255, 1);
+    margin-top: 130px;
+    text-align: center;
+    border-radius: 14px;
+    padding: 71px 150px;
+
+}
+.focus-better-title{
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 20;
+} 
+
+.focus-better-short-text{
+font-size: 20px;
+margin-top: 0px;
+
+}
+
+.get-started-button{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.focus-better-image{
+    border-radius: 48px;
+    margin-top: 20px;
 }
